# django-tasks-celery

./: .gitignore  .pre-commit-config.yaml  PLAN.md  README.md  REVIEW.md  mkdocs.yml  pyproject.toml  versions.json
.github/workflows/: ci.yml  docs.yml  publish.yml  tag.yml
0.1.0/reference/changelog/: index.html
0.1.0a2/: index.html
0.1.0a2/search/: search_index.json
0.1.1/: 404.html  index.html
0.1.1/search/: search_index.json
django_tasks_celery/: __init__.py  backend.py  compat.py  register.py  results.py
docs/: index.md
docs/getting-started/: installation.md  quickstart.md
docs/reference/: api.md  changelog.md
docs/user-guide/: configuration.md
examples/simple/: README.md  celery_app.py  pyproject.toml  run.py  run_in_process.py  settings.py  tasks.py
main/: 404.html  index.html
main/getting-started/installation/: index.html
main/getting-started/quickstart/: index.html
main/reference/api/: index.html
main/reference/changelog/: index.html
main/search/: search_index.json
main/user-guide/configuration/: index.html
tests/: conftest.py  tasks.py  test_backend.py  test_checks.py  test_integration.py  test_priority.py  test_redis.py  test_register.py  test_results.py  test_signals.py
tests/fixtures/: celery.py
tests/redis_integration/: conftest.py  test_redis.py
tests/settings/: base.py
